# sonic-gnmi

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  azure-pipelines.yml  pure.mk
.github/workflows/: check-submodule-update.yml
internal/diskspace/: BUILD.bazel
internal/download/: BUILD.bazel
internal/firmware/: BUILD.bazel
internal/hash/: BUILD.bazel
pkg/gnoi/file/: dpu_monkey_test.go  file.go
sonic-gnmi-standalone/: AUTHORIZATION_DEMO.md  go.mod  go.sum
sonic-gnmi-standalone/pkg/cert/: client_auth.go
sonic-gnmi-standalone/pkg/server/: builder.go
sonic-gnmi-standalone/pkg/server/auth/: authorizer.go  middleware.go  middleware_test.go  server_with_auth.go  test_example.go
test/: utils.py
testpkg/integration/: helper.go  helper_test.go
testpkg/pure/: math.go  math_test.go
upgrade-service/cmd/client/: main.go
upgrade-service/cmd/test/download/: main.go
upgrade-service/docs/: manual-testing.md
upgrade-service/internal/download/: download.go  download_test.go
upgrade-service/pkg/server/: firmware_management.go
